WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
209527
[MultiColumn] Infinite recursion in RenderBlockFlow::relayoutToAvoidWidows
https://bugs.webkit.org/show_bug.cgi?id=209527
Summary
[MultiColumn] Infinite recursion in RenderBlockFlow::relayoutToAvoidWidows
alan
Reported
2020-03-24 17:58:04 PDT
when we can't accommodated the windows in the current column.
Attachments
Patch
(3.68 KB, patch)
2020-03-24 18:06 PDT
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2020-03-24 18:03:40 PDT
<
rdar://problem/56993589
>
alan
Comment 2
2020-03-24 18:06:37 PDT
Created
attachment 394452
[details]
Patch
EWS
Comment 3
2020-03-24 18:46:14 PDT
Committed
r258967
: <
https://trac.webkit.org/changeset/258967
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 394452
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug