[MultiColumn] Infinite recursion in RenderBlockFlow::relayoutToAvoidWidows https://bugs.webkit.org/show_bug.cgi?id=209527 <rdar://problem/56993589>

Reviewed by Simon Fraser.

Source/WebCore:

This patch expands on r204980. This is yet another case when we can't possibly accommodate widows in the current column.

Test: fast/multicol/page-cant-accommodate-widow-crash.html

* rendering/RenderBlockFlow.cpp:
(WebCore::RenderBlockFlow::adjustLinePositionForPagination):

LayoutTests:

* fast/multicol/page-cant-accommodate-widow-crash-expected.txt: Added.
* fast/multicol/page-cant-accommodate-widow-crash.html: Added.


Canonical link: https://commits.webkit.org/222453@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@258967 268f45cc-cd09-0410-ab3c-d52691b4dbfc